@@ -1,3 +1,3 @@
 SUBDIRS=
 lib_LIBRARIES=libzbxsms.a
-libzbxemail_a_SOURCES=sms.c
+libzbxsms_a_SOURCES=sms.c
