@@ -22,10 +22,13 @@
 #include <unistd.h>
 #include <sys/types.h>
 #include <sys/stat.h>
+#include <fcntl.h>
 
 #include <string.h>
 
 #include <errno.h>
+
+#include <termios.h>
 
 #include "common.h"
 #include "log.h"
@@ -33,359 +36,30 @@
 
 #include "sms.h"
 
-/*
- * Send email
- */ 
-int	send_sms(char *device,char *number,char *message, char *error, int max_error_len)
-{
-	int	s;
-	int	i,e;
-	char	c[MAX_STRING_LEN];
-	struct hostent *hp;
-
-	char	str_time[MAX_STRING_LEN];
-	struct	tm *local_time = NULL;
-	time_t	email_time;
-
-	struct sockaddr_in myaddr_in;
-	struct sockaddr_in servaddr_in;
-
-	char	*OK_220="220";
-	char	*OK_250="250";
-	char	*OK_251="251";
-	char	*OK_354="354";
-
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL");
-
-	servaddr_in.sin_family=AF_INET;
-	hp=gethostbyname(smtp_server);
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL2");
-	if(hp==NULL)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Cannot get IP for mailserver [%s]",smtp_server);
-		zabbix_syslog("Cannot get IP for mailserver [%s]",smtp_server);
-		snprintf(error,max_error_len-1,"Cannot get IP for mailserver [%s]",smtp_server);
-		return FAIL;
-	}
-
-	servaddr_in.sin_addr.s_addr=((struct in_addr *)(hp->h_addr))->s_addr;
-	servaddr_in.sin_port=htons(25);
-
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL3");
-
-/*	if(hp==NULL)
-	{
-		zabbix_log(LOG_LEVEL_ERR, "Cannot get IP for mailserver [%s]",smtp_server);
-		return FAIL;
-	}
-
-	servaddr_in.sin_addr.s_addr=((struct in_addr *)(hp->h_addr))->s_addr;
-	servaddr_in.sin_port=htons(25);*/
-
-	s=socket(AF_INET,SOCK_STREAM,0);
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL4");
-	if(s == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Cannot create socket [%s]", strerror(errno));
-		zabbix_syslog("Cannot create socket [%s]", strerror(errno));
-		snprintf(error,max_error_len-1,"Cannot create socket [%s]",strerror(errno));
-		return FAIL;
-	}
-	
-	myaddr_in.sin_family = AF_INET;
-	myaddr_in.sin_port=0;
-	myaddr_in.sin_addr.s_addr=INADDR_ANY;
-
-	if( connect(s,(struct sockaddr *)&servaddr_in,sizeof(struct sockaddr_in)) == -1 )
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Cannot connect to SMTP server [%s] Error [%s]",smtp_server, strerror(errno));
-		zabbix_syslog("Cannot connect to SMTP server [%s] Error [%s]",smtp_server, strerror(errno));
-		snprintf(error,max_error_len-1,"Cannot connect to SMTP server [%s] [%s]", smtp_server, strerror(errno));
-		close(s);
-		return FAIL;
-	}
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL5");
-
-	memset(c,0,MAX_STRING_LEN);
-/*	i=sizeof(struct sockaddr_in);
-	i=recvfrom(s,c,MAX_STRING_LEN,0,(struct sockaddr *)&servaddr_in,&i);*/
-	i=read(s,c,MAX_STRING_LEN);
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL6");
-	if(i == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Error receiving initial string from SMTP server [%m]");
-		zabbix_syslog("Error receiving initial string from SMTP server [%s]", strerror(errno));
-		snprintf(error,max_error_len-1,"Error receiving initial string from SMTP server [%s]", strerror(errno));
-		close(s);
-		return FAIL;
-	}
-	if(strncmp(OK_220,c,strlen(OK_220)) != 0)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "No welcome message 220* from SMTP server [%s]", c);
-		zabbix_syslog("No welcome message 220* from SMTP server [%s]", c);
-		snprintf(error,max_error_len-1,"No welcome message 220* from SMTP server [%s]", c);
-		close(s);
-		return FAIL;
-	}
-
-	if(strlen(smtp_helo) != 0)
-	{
-		memset(c,0,MAX_STRING_LEN);
-		snprintf(c,sizeof(c)-1,"HELO %s\r\n",smtp_helo);
-/*		e=sendto(s,c,strlen(c),0,(struct sockaddr *)&servaddr_in,sizeof(struct sockaddr_in)); */
-		e=write(s,c,strlen(c)); 
-		zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL7");
-		if(e == -1)
-		{
-			zabbix_log(LOG_LEVEL_DEBUG, "Error sending HELO to mailserver [%s]", strerror(errno));
-			zabbix_syslog("Error sending HELO to mailserver [%s]", strerror(errno));
-			snprintf(error,max_error_len-1,"Error sending HELO to mailserver [%s]", strerror(errno));
-			close(s);
-			return FAIL;
-		}
-				
-		memset(c,0,MAX_STRING_LEN);
-/*		i=sizeof(struct sockaddr_in);
-		i=recvfrom(s,c,MAX_STRING_LEN,0,(struct sockaddr *)&servaddr_in,&i);*/
-		i=read(s,c,MAX_STRING_LEN);
-		zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL8");
-		if(i == -1)
-		{
-			zabbix_log(LOG_LEVEL_DEBUG, "Error receiving answer on HELO request [%s]", strerror(errno));
-			zabbix_syslog("Error receiving answer on HELO request [%s]", strerror(errno));
-			snprintf(error,max_error_len-1,"Error receiving answer on HELO request [%s]", strerror(errno));
-			close(s);
-			return FAIL;
-		}
-		if(strncmp(OK_250,c,strlen(OK_250)) != 0)
-		{
-			zabbix_log(LOG_LEVEL_DEBUG, "Wrong answer on HELO [%s]",c);
-			zabbix_syslog("Wrong answer on HELO [%s]",c);
-			snprintf(error,max_error_len-1,"Wrong answer on HELO [%s]", c);
-			close(s);
-			return FAIL;
-		}
-	}
-			
-	memset(c,0,MAX_STRING_LEN);
-/*	sprintf(c,"MAIL FROM: %s\r\n",smtp_email);*/
-	snprintf(c,sizeof(c)-1,"MAIL FROM: <%s>\r\n",smtp_email);
-/*	e=sendto(s,c,strlen(c),0,(struct sockaddr *)&servaddr_in,sizeof(struct sockaddr_in)); */
-	e=write(s,c,strlen(c)); 
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL9");
-	if(e == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Error sending MAIL FROM to mailserver [%s]", strerror(errno));
-		zabbix_syslog("Error sending MAIL FROM to mailserver [%s]", strerror(errno));
-		snprintf(error,max_error_len-1,"Error sending MAIL FROM to mailserver [%s]", strerror(errno));
-		close(s);
-		return FAIL;
-	}
-
-	memset(c,0,MAX_STRING_LEN);
-/*	i=sizeof(struct sockaddr_in);
-	i=recvfrom(s,c,MAX_STRING_LEN,0,(struct sockaddr *)&servaddr_in,&i);*/
-	i=read(s,c,MAX_STRING_LEN);
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL10");
-	if(i == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Error receiving answer on MAIL FROM request [%s]", strerror(errno));
-		zabbix_syslog("Error receiving answer on MAIL FROM request [%s]", strerror(errno));
-		snprintf(error,max_error_len-1,"Error receiving answer on MAIL FROM request [%s]", strerror(errno));
-		close(s);
-		return FAIL;
-	}
-	if(strncmp(OK_250,c,strlen(OK_250)) != 0)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Wrong answer on MAIL FROM [%s]", c);
-		zabbix_syslog("Wrong answer on MAIL FROM [%s]", c);
-		snprintf(error,max_error_len-1,"Wrong answer on MAIL FROM [%s]", c);
-		close(s);
-		return FAIL;
-	}
-			
-	memset(c,0,MAX_STRING_LEN);
-	snprintf(c,sizeof(c)-1,"RCPT TO: <%s>\r\n",mailto);
-/*	e=sendto(s,c,strlen(c),0,(struct sockaddr *)&servaddr_in,sizeof(struct sockaddr_in)); */
-	e=write(s,c,strlen(c)); 
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL11");
-	if(e == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Error sending RCPT TO to mailserver [%s]", strerror(errno));
-		zabbix_syslog("Error sending RCPT TO to mailserver [%s]", strerror(errno) );
-		snprintf(error,max_error_len-1,"Error sending RCPT TO to mailserver [%s]", strerror(errno));
-		close(s);
-		return FAIL;
-	}
-	memset(c,0,MAX_STRING_LEN);
-/*	i=sizeof(struct sockaddr_in);
-	i=recvfrom(s,c,MAX_STRING_LEN,0,(struct sockaddr *)&servaddr_in,&i);*/
-	i=read(s,c,MAX_STRING_LEN);
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL12");
-	if(i == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Error receiving answer on RCPT TO request [%s]", strerror(errno));
-		zabbix_syslog("Error receiving answer on RCPT TO request [%s]", strerror(errno));
-		snprintf(error,max_error_len-1,"Error receiving answer on RCPT TO request [%s]", strerror(errno));
-		close(s);
-		return FAIL;
-	}
-	/* May return 251 as well: User not local; will forward to <forward-path>. See RFC825 */
-	if( strncmp(OK_250,c,strlen(OK_250)) != 0 && strncmp(OK_251,c,strlen(OK_251)) != 0)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Wrong answer on RCPT TO [%s]", c);
-		zabbix_syslog("Wrong answer on RCPT TO [%s]", c);
-		snprintf(error,max_error_len-1,"Wrong answer on RCPT TO [%s]", c);
-		close(s);
-		return FAIL;
-	}
-	
-	memset(c,0,MAX_STRING_LEN);
-	snprintf(c,sizeof(c)-1,"DATA\r\n");
-/*	e=sendto(s,c,strlen(c),0,(struct sockaddr *)&servaddr_in,sizeof(struct sockaddr_in)); */
-	e=write(s,c,strlen(c)); 
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL13");
-	if(e == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Error sending DATA to mailserver [%s]", strerror(errno));
-		zabbix_syslog("Error sending DATA to mailserver [%s]", strerror(errno));
-		snprintf(error,max_error_len-1,"Error sending DATA to mailserver [%s]", strerror(errno));
-		close(s);
-		return FAIL;
-	}
-	memset(c,0,MAX_STRING_LEN);
-/*	i=sizeof(struct sockaddr_in);
-	i=recvfrom(s,c,MAX_STRING_LEN,0,(struct sockaddr *)&servaddr_in,&i);*/
-	i=read(s,c,MAX_STRING_LEN);
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL14");
-	if(i == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Error receivng answer on DATA request [%s]", strerror(errno));
-		zabbix_syslog("Error receivng answer on DATA request [%s]", strerror(errno));
-		snprintf(error,max_error_len-1,"Error receivng answer on DATA request [%s]", strerror(errno));
-		close(s);
-		return FAIL;
-	}
-	if(strncmp(OK_354,c,strlen(OK_354)) != 0)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Wrong answer on DATA [%s]", c);
-		zabbix_syslog("Wrong answer on DATA [%s]", c);
-		snprintf(error,max_error_len-1,"Wrong answer on DATA [%s]", c);
-		close(s);
-		return FAIL;
-	}
-
-	memset(c,0,MAX_STRING_LEN);
-	time(&email_time);
-	local_time = localtime(&email_time);
-	strftime( str_time, MAX_STRING_LEN, "%a, %d %b %Y %H:%M:%S %z", local_time );
-/*	sprintf(c,"Subject: %s\r\n%s",mailsubject, mailbody);*/
-/*	snprintf(c,sizeof(c)-1,"From:<%s>\r\nTo:<%s>\r\nSubject: %s\r\n\r\n%s",smtp_email,mailto,mailsubject, mailbody);*/
-	snprintf(c,sizeof(c)-1,"From:<%s>\r\nTo:<%s>\r\nDate: %s\r\nSubject: %s\r\n\r\n%s",smtp_email,mailto,str_time,mailsubject, mailbody);
-/*	e=sendto(s,c,strlen(c),0,(struct sockaddr *)&servaddr_in,sizeof(struct sockaddr_in)); */
-	e=write(s,c,strlen(c)); 
-	if(e == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Error sending mail subject and body to mailserver [%s]", strerror(errno));
-		zabbix_syslog("Error sending mail subject and body to mailserver [%s]", strerror(errno));
-		snprintf(error,max_error_len-1,"Error sending mail subject and body to mailserver [%s]", strerror(errno));
-		close(s);
-		return FAIL;
-	}
-
-	memset(c,0,MAX_STRING_LEN);
-	snprintf(c,sizeof(c)-1,"\r\n.\r\n");
-/*	e=sendto(s,c,strlen(c),0,(struct sockaddr *)&servaddr_in,sizeof(struct sockaddr_in)); */
-	e=write(s,c,strlen(c)); 
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL15");
-	if(e == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Error sending . to mailserver [%s]", strerror(errno));
-		zabbix_syslog("Error sending . to mailserver [%s]", strerror(errno));
-		snprintf(error,max_error_len-1,"Error sending . to mailserver [%s]", strerror(errno));
-		close(s);
-		return FAIL;
-	}
-	memset(c,0,MAX_STRING_LEN);
-/*	i=sizeof(struct sockaddr_in);
-	i=recvfrom(s,c,MAX_STRING_LEN,0,(struct sockaddr *)&servaddr_in,&i);*/
-	i=read(s,c,MAX_STRING_LEN);
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL16");
-	if(i == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Error receivng answer on . request [%s]", strerror(errno));
-		zabbix_syslog("Error receivng answer on . request [%s]", strerror(errno));
-		snprintf(error,max_error_len-1,"Error receivng answer on . request [%s]", strerror(errno));
-		close(s);
-		return FAIL;
-	}
-	if(strncmp(OK_250,c,strlen(OK_250)) != 0)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Wrong answer on end of data [%s]", c);
-		zabbix_syslog("Wrong answer on end of data [%s]", c);
-		snprintf(error,max_error_len-1,"Wrong answer on end of data [%s]", c);
-		close(s);
-		return FAIL;
-	}
-	
-	memset(c,0,MAX_STRING_LEN);
-	snprintf(c,sizeof(c)-1,"QUIT\r\n");
-/*	e=sendto(s,c,strlen(c),0,(struct sockaddr *)&servaddr_in,sizeof(struct sockaddr_in)); */
-	e=write(s,c,strlen(c)); 
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL18");
-	if(e == -1)
-	{
-		zabbix_log(LOG_LEVEL_DEBUG, "Error sending QUIT to mailserver [%s]", strerror(errno));
-		zabbix_syslog("Error sending QUIT to mailserver [%s]", strerror(errno));
-		snprintf(error,max_error_len-1,"Error sending QUIT to mailserver [%s]", strerror(errno));
-		close(s);
-		return FAIL;
-	}
-
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL19");
-	close(s);
-
-	zabbix_log( LOG_LEVEL_DEBUG, "SENDING MAIL. END.");
-	
-	return SUCCEED;
-}
-
-
-#include <stdlib.h>
-#include <errno.h>
-#include <sys/types.h>
-#include <sys/stat.h>
-#include <fcntl.h>
-
-#include <unistd.h>
-#include <stdio.h>
-#include <string.h>
-
-#include <termios.h>
-
-/* 0 - OK, -1 - not OK */
-int write_gsm(int fd, char *str)
+static int write_gsm(int fd, char *str, char *error, int max_error_len)
 {
 	int	len;
-	int	ret = 0;
+	int	ret = SUCCEED;
 
 	len = strlen(str);
 
 	if (write(fd, str, len) < len)
 	{
-		printf("Error writing to modem\n");
-		ret = -1;
+		zabbix_log(LOG_LEVEL_DEBUG, "Error writing to GSM modem [%s]", strerror(errno));
+		zabbix_syslog("Error writing to GSM modem [%s]", strerror(errno));
+		snprintf(error,max_error_len-1, "Error writing to GSM modem [%s]", strerror(errno));
+		return FAIL;
 	}
 
 	return ret;
 }
 
-int read_gsm(int fd, char *expect)
+static int read_gsm(int fd, char *expect, char *error, int max_error_len)
 {
 	char	buffer[255];
 	char	*bufptr;
-	int	i,nbytes;
-	int	ret = -1;
+	int	nbytes;
+	int	ret = SUCCEED;
 
 	/* read characters into our string buffer until we get a CR or NL */
 	bufptr = buffer;
@@ -398,32 +72,35 @@ int read_gsm(int fd, char *expect)
 	}
 	/* nul terminate the string and see if we got an OK response */
 	*bufptr = '\0';
-//	printf("Read buffer [%s]\n", buffer);
+/*	printf("Read buffer [%s]\n", buffer);
 	for(i=0;i<strlen(buffer);i++)
-		printf("[%x]\n",buffer[i]);
-	if (strstr(buffer, expect) != NULL)
+		printf("[%x]\n",buffer[i]);*/
+	if (strstr(buffer, expect) == NULL)
 	{
-		printf("Read OK\n");
-		ret = 0;
-	}
-	else
-	{
-		printf("Read something unexpected\n");
+		zabbix_log(LOG_LEVEL_DEBUG, "Read something unexpected from GSM modem");
+		zabbix_syslog("Read something unexpected from GSM modem");
+		snprintf(error,max_error_len-1, "Read something unexpected from GSM modem");
+		ret = FAIL;
 	}
 	return ret;
 }
 
-int main()
+int	send_sms(char *device,char *number,char *message, char *error, int max_error_len)
 {
 	int	f;
+	char	str[MAX_STRING_LEN];
 
 	struct termios options, old_options;
 
-	f=open("/dev/ttyS0",O_RDWR | O_NOCTTY | O_NDELAY);
+	int	ret = SUCCEED;
+
+	f=open(device,O_RDWR | O_NOCTTY | O_NDELAY);
 	if(f == -1)
 	{
-		printf("Error open(): [%s]\n", strerror(errno));
-		return -1;
+		zabbix_log(LOG_LEVEL_DEBUG, "Error open(%s) [%s]", device, strerror(errno));
+		zabbix_syslog("Error open(%s) [%s]", device, strerror(errno));
+		snprintf(error,max_error_len-1, "Error open(%s) [%s]", device, strerror(errno));
+		return FAIL;
 	}
 	fcntl(f, F_SETFL,0);
 	tcgetattr(f, &old_options);
@@ -440,26 +117,45 @@ int main()
 	tcsetattr(f, TCSANOW, &options);
 	
 	/* Turn off echo */
-	write_gsm(f,"ATE0\r");
-	read_gsm(f,"\rOK\r");
+	if(ret == SUCCEED)
+		ret = write_gsm(f,"ATE0\r", error, max_error_len);
+	if(ret == SUCCEED)
+		ret = read_gsm(f,"\rOK\r", error, max_error_len);
 
 	/* Init modem */
-	write_gsm(f,"AT\r");
-	read_gsm(f,"\rOK\r");
+	if(ret == SUCCEED)
+		ret = write_gsm(f,"AT\r", error, max_error_len);
+	if(ret == SUCCEED)
+		ret = read_gsm(f,"\rOK\r", error, max_error_len);
 
 	/* Switch to text mode */
-	write_gsm(f,"AT+CMGF=1\r");
-	read_gsm(f,"\rOK\r");
+	if(ret == SUCCEED)
+		ret = write_gsm(f,"AT+CMGF=1\r", error, max_error_len);
+	if(ret == SUCCEED)
+		ret = read_gsm(f,"\rOK\r", error, max_error_len);
 
 	/* Send phone number */
-	write_gsm(f,"AT+CMGS=\"9275351\"\r");
-	read_gsm(f,"\r> ");
+	if(ret == SUCCEED)
+	{
+		snprintf(str, MAX_STRING_LEN-1,"AT+CMGS=\"%s\"\r", number);
+		ret = write_gsm(f,str, error, max_error_len);
+	}
+	if(ret == SUCCEED)
+		ret = read_gsm(f,"\r> ", error, max_error_len);
 
 	/* Send message */
-	write_gsm(f,"Test message\x01a");
-	read_gsm(f,"\r+CMGS: ");
-	read_gsm(f,"OK\r");
+	if(ret == SUCCEED)
+	{
+		snprintf(str, MAX_STRING_LEN-1,"%s\x01a", message);
+		ret = write_gsm(f, str, error, max_error_len);
+	}
+	if(ret == SUCCEED)
+		ret = read_gsm(f,"\r+CMGS: ", error, max_error_len);
+	if(ret == SUCCEED)
+		ret = read_gsm(f,"OK\r", error, max_error_len);
 
 	tcsetattr(f, TCSANOW, &old_options);
 	close(f);
+
+	return ret;
 }
