@@ -1,0 +1,1 @@
+alter table media_type add	gsm_modem	varchar(255)	DEFAULT '' NOT NULL;
